--- a/scss/__colors.scss
+++ b/scss/__colors.scss
@@ -1,3 +1,7 @@
 $bg-color: #21272b;
 $text-color: #ffffff;
+$gray-color: #5a5a5a;
+$dark-gray-color: #414141;
 $main-color: #b10101;
+$good-color: #4eac18;
+$wrong-color: #ac1d18;
