--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,10 +20,25 @@ body {
 }
 
 .btn {
+	padding: 2rem 3rem;
 	text-decoration: none;
 	color: c.$text-color;
 	text-transform: uppercase;
-	padding: 2rem 3rem;
+	cursor: pointer;
+}
+
+h1 {
+	font-size: 4rem;
+	span {
+		color: c.$main-color;
+	}
+}
+
+.field {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 5px;
 }
 
 .container {
@@ -34,17 +49,114 @@ body {
 	height: 100vh;
 	width: 100%;
 	gap: 2rem;
-	h1 {
-		font-size: 4rem;
-		span {
-			color: c.$main-color;
-		}
-	}
-	img {
-		width: 100px;
-	}
+
 	.btn {
 		border-radius: 5px;
 		background-color: c.$main-color;
+		&:last-of-type {
+			padding: 1.5rem 2rem;
+		}
+	}
+}
+
+.game {
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	.window {
+		max-width: 768px;
+		img {
+			border: 4px dotted c.$main-color;
+			width: 100%;
+		}
+	}
+	.fields {
+		display: flex;
+		justify-content: center;
+		gap: 0.5rem;
+		flex-wrap: wrap;
+		.field {
+			width: 50px;
+			height: 50px;
+			background-color: c.$gray-color;
+		}
+	}
+	form {
+		display: flex;
+		flex-direction: column;
+		gap: 2rem;
+		font-size: 2rem;
+		input {
+			padding: 1rem;
+			font-size: 2rem;
+			background: none;
+			border: 1px solid c.$main-color;
+			color: c.$text-color;
+			text-align: center;
+		}
+		.btn {
+			background: none;
+			border: 1px solid transparent;
+			background-color: c.$main-color;
+			border-radius: 8px;
+		}
+	}
+	.used-letters {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		p {
+			text-align: center;
+			font-size: 2rem;
+		}
+		.box {
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+			gap: 1rem;
+
+			.well {
+				background-color: c.$good-color;
+			}
+
+			.wrong {
+				background-color: c.$wrong-color;
+			}
+		}
+		.field {
+			width: 40px;
+			height: 40px;
+			background-color: c.$dark-gray-color;
+		}
+	}
+}
+
+@media (min-width: 576px) {
+	.container {
+		h1 {
+			font-size: 7rem;
+		}
+
+		.btn {
+			padding: 3rem 5rem;
+			font-size: 2rem;
+			&:last-of-type {
+				padding: 2rem 5rem;
+			}
+		}
+	}
+
+	.game {
+		padding: 3rem;
+		form {
+			input {
+				padding: 1rem 2rem;
+			}
+			.btn {
+				font-size: 2rem;
+			}
+		}
 	}
 }
