--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@ html {
 }
 
 body {
+	position: relative;
 	font-size: 1.6rem;
 	font-family: sans-serif;
 	background-color: c.$bg-color;
@@ -28,10 +29,15 @@ body {
 }
 
 h1 {
+	text-align: center;
 	font-size: 4rem;
-	span {
-		color: c.$main-color;
-	}
+}
+span {
+	color: c.$main-color;
+}
+
+.label {
+	font-size: 2rem;
 }
 
 .field {
@@ -39,6 +45,32 @@ h1 {
 	align-items: center;
 	justify-content: center;
 	border-radius: 5px;
+}
+
+form {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 2rem;
+	input,
+	select {
+		border-radius: 5px;
+		padding: 1rem;
+		font-size: 2rem;
+		background: none;
+		border: 1px solid c.$main-color;
+		color: c.$text-color;
+		text-align: center;
+	}
+	select {
+		background-color: c.$main-color;
+	}
+	.btn {
+		background: none;
+		border: 1px solid transparent;
+		background-color: c.$main-color;
+		border-radius: 8px;
+	}
 }
 
 .container {
@@ -64,52 +96,45 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	gap: 2rem;
+	min-height: 100vh;
 	.window {
-		max-width: 768px;
+		max-width: 700px;
 		img {
 			border: 4px dotted c.$main-color;
 			width: 100%;
 		}
 	}
+
+	.lifes {
+		color: c.$main-color;
+	}
+
 	.fields {
 		display: flex;
-		justify-content: center;
-		gap: 0.5rem;
-		flex-wrap: wrap;
+		flex-direction: column;
+		text-align: center;
+		gap: 1rem;
+		.box {
+			display: flex;
+			justify-content: center;
+			gap: 0.5rem;
+			flex-wrap: wrap;
+		}
 		.field {
 			width: 50px;
 			height: 50px;
 			background-color: c.$gray-color;
 		}
 	}
-	form {
-		display: flex;
-		flex-direction: column;
-		gap: 2rem;
-		font-size: 2rem;
-		input {
-			padding: 1rem;
-			font-size: 2rem;
-			background: none;
-			border: 1px solid c.$main-color;
-			color: c.$text-color;
-			text-align: center;
-		}
-		.btn {
-			background: none;
-			border: 1px solid transparent;
-			background-color: c.$main-color;
-			border-radius: 8px;
-		}
-	}
+
 	.used-letters {
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
 		p {
 			text-align: center;
-			font-size: 2rem;
 		}
 		.box {
 			display: flex;
@@ -131,6 +156,48 @@ h1 {
 			background-color: c.$dark-gray-color;
 		}
 	}
+}
+
+.ranking {
+	padding: 2rem 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+	min-height: 100vh;
+	.place {
+		background-color: c.$gray-color;
+		width: 400px;
+		padding: 2rem;
+		text-align: center;
+		border-radius: 9px;
+		&:first-of-type {
+			background-color: goldenrod;
+		}
+		&:nth-of-type(2) {
+			background-color: silver;
+		}
+		&:nth-of-type(3) {
+			background-color: brown;
+		}
+	}
+}
+
+.back,
+.reset {
+	position: absolute;
+	top: 50px;
+	text-decoration: none;
+	color: c.$text-color;
+}
+
+.back {
+	left: 50px;
+}
+
+.reset {
+	right: 50px;
 }
 
 @media (min-width: 576px) {
